working except for animation and clearing text box

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="formContainer">
             <form id="sports-form">
                 <label for="sports-input">Add a sport.</label>
-                <input type="text" id="sports-input"><br>
-                <!-- REVIEW OF CONCEPTS: Clicking button triggers new sport to be added; type and value are attributes with values of "submit" and "Add a Movie, Yo!", respectively-->
+                <input type="text" id="sports-input">
+                <br>
                 <input id="add-sports" type="submit" value="Submit">
             </form>
         </div>
         <div class="gifsContainer">
-            <div id="gifs-appear-here">
+            <div id="gifs-appear-here" class="gif">
             </div>
         </div>
     </div>
