css working and app functional except for animate

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="wrapper">
-        <div class="Container">
-            <h1>Sports GIF Search</h1>
+        <header>Sports GIF Search</header>
+        <div class="buttonsContainer">
             <!-- Rendered buttons will get dumped here. Name of buttons will match entry associated with "#sports-input".-->
             <div id="buttons-view">
             </div>
@@ -23,6 +23,7 @@
             <form id="sports-form">
                 <label for="sports-input">Add a sport.</label>
                 <input type="text" id="sports-input">
+                <br>
                 <br>
                 <input id="add-sports" type="submit" value="Submit">
             </form>
