DONE except can't delete text in text box after pushing into array

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <div class="wrapper">
         <header>Sports GIF Search</header>
         <div class="buttonsContainer">
-            <!-- Rendered buttons will get dumped here. Name of buttons will match entry associated with "#sports-input".-->
+            <!-- Rendered buttons will get dumped here.-->
             <div id="buttons-view">
             </div>
         </div>
         <!-- REVIEW OF CONCEPTS: USER INPUT DATA-->
         <div class="formContainer">
             <form id="sports-form">
-                <label for="sports-input">Add a sport.</label>
+                <label for="sports-input">Click on a sport to see associated GIFs. Click on GIFs to control animation. ADD ANOTHER SPORT: </label>
                 <input type="text" id="sports-input">
                 <br>
                 <br>
