review of concepts added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GifTastic TV Shows</title>
+    <title>GifTastic for Sports</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
@@ -33,9 +33,6 @@
             </div>
         </div>
     </div>
+    <script src="assets/javascript/app.js"></script>
 </body>
-<script src="assets/javascript/app.js"></script>
-
-</body>
-
 </html>
